= Version 1.2 on 20XX-XX-XX =

 * Apply downstream patches from FreeBSD
 * meson: Fix project license field (MIT->GPL-2.0-only)

= Version 1.1 on 2023-11-26 =

 * waf: Add a script to generate an unpacked instance of the waf
   all-in-one blob. (by Alessio Treglia)
   http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=654469
 * liblash: Fix small misspellings (by Alessio Treglia)
 * Default the name of configuration tool to "ladi-control-center",
   instead of the older "ladiconf" (by Alessio Treglia)
 * gladish: embed flowcanvas-0.7.1
 * fixes of compiler warnings
 * ladishd: last-rite stdout/stderr output of child subprocesses is
   not ignored anymore.
 * ladishd: Fix logging from child processes
 * ladishd/loader: add includes for getrlimit (build fix)
 * ladish: Don't notify user about unexpectedly stopped apps that
   returned 0 exit code. Fixes #197 (from old ladish.org trac
   instance). The exit code detection for apps ran in terminal is/was
   not working, at least with xterm. xterm doesnt seem to be able to
   return exit code of its child process.
 * ladishd: preload libasound.so.2 instead of libasound.so (by falkTX)
 * ladishd: fix double free in malloc failure handling code path
 * ladicore: fix potential access of NULL pointer in catdup
 * proxies: add assert to disable complain from clang static analyzer
 * ladishd/rooms: Fix uses of unintialized memory
 * daemon/room-save: Actually handle project directory
   existence-check/creation failures.
 * proxies: Remove useless assignment pointed by clang static analizer
 * ladishd: Fix memory leak on procfs read() failure
 * ladishd/loader: Fix use of uninitialized memory in chdir() failure
   handling code path.
 * ladicore: Fix memory leak on procfs read() failure
 * ladishd: Improve assert and fix clang static analyzer report
 * ladishd: Fix undefined return value in case of error (on studio
   save)
 * ladishd/virtualizer: Don't set garbge pid to ports (either new or
   existing ones).